update xml datasource with docs

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>startup-exception</module>
         <module>postgresql-permission</module>
+        <module>jdbc-client</module>
     </modules>
 
 </project>
