--- a/jdbc-client/pom.xml
+++ b/jdbc-client/pom.xml
@@ -1,6 +1,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.teiid</groupId>
-  <artifactId>client</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>teiid-jdbc-client</artifactId>
+  <version>1.0-SNAPSHOT</version>
+
+ <packaging>jar</packaging>
+         <name>JBoss Data Virtualization JDBC Client</name>
+                 <description>JBoss Data Virtualization JDBC Client</description>
+
+        <url>https://github.com/kylinsoong</url>
+
+        <properties>
+                        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                                        <compiler.plugin.version>2.3.1</compiler.plugin.version>
+                                                        <maven.compiler.target>1.6</maven.compiler.target>
+                                                                        <maven.compiler.source>1.6</maven.compiler.source>
+                                                                                </properties>
+
+
+        <dependencies>
+
+
+
+        </dependencies>
+
+        <build>
+                        <plugins>
+                                                <plugin>
+                                                                                <artifactId>maven-compiler-plugin</artifactId>
+                                                                                                                <version>${compiler.plugin.version}</version>
+                                                                                                                                                <configuration>
+                                                                                                                                                                                        <source>${maven.compiler.source}</source>
+                                                                                                                                                                                                                                <target>${maven.compiler.target}</target>
+                                                                                                                                                                                                                                                                </configuration>
+                                                                                                                                                                                                                                                                                        </plugin>
+                                                                                                                                                                                                                                                                                                        </plugins>
+                                                                                                                                                                                                                                                                                                                </build>
+
 </project>
