--- a/postgresql-permission/pom.xml
+++ b/postgresql-permission/pom.xml
@@ -22,12 +22,19 @@
 
 	<dependencies>
 
-<!--  -->
-	<dependency>
-		<groupId>org.jboss.teiid</groupId>
-		<artifactId>teiid-common-core</artifactId>
-		<version>8.4.1-redhat-7</version>
-	</dependency>
+		<!-- -->
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-jdbc-client</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.2-504.jdbc4</version>
+		</dependency>
+
 
 
 	</dependencies>
