add eclipselink on top of teiid

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>startup-exception</module>
         <module>postgresql-permission</module>
         <module>jdbc-client</module>
+        <model>eclipselink-on-top-of-teiid</module>
     <module>connector-myType</module>
   </modules>
 
