--- a/hibernate-on-top-of-teiid/pom.xml
+++ b/hibernate-on-top-of-teiid/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jboss.teiid.quickstart</groupId>
-	<artifactId>eclipselink-on-top-of-teiid</artifactId>
+	<artifactId>hibernate-on-top-of-teiid</artifactId>
 	<version>2.0.0</version>
 	<name>Teiid Quickstart: eclipselink</name>
 	<description>Teiid Quickstart: eclipselink</description>
@@ -14,20 +14,19 @@
 		<version.jboss.bom.eap>6.2.0-build-7</version.jboss.bom.eap>
 	</properties>
 
-
-
 	<dependencies>
 
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.5.0</version>
-		</dependency>
 <!--  -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.1.6.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-client</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.7.0.Final</version>
 		</dependency>
 
 		<dependency>
@@ -38,26 +37,17 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.jboss.teiid.connectors</groupId>
-			<artifactId>translator-file</artifactId>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-hibernate-dialect</artifactId>
 			<version>8.9.0.Alpha1-SNAPSHOT</version>
-			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.jboss.teiid.connectors</groupId>
-			<artifactId>connector-file</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>test-integration-common</artifactId>
 			<version>8.9.0.Alpha1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		
 	</dependencies>
 	<build>
 		<plugins>
