--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
         <module>startup-exception</module>
         <module>postgresql-permission</module>
         <module>jdbc-client</module>
-        <model>eclipselink-on-top-of-teiid</module>
+        <module>eclipselink-on-top-of-teiid</module>
+        <module>hibernate-on-top-of-teiid</module>
+        <module>teiid-quickstart</module>
     <module>connector-myType</module>
   </modules>
 
