--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -31,39 +31,40 @@
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-runtime</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-admin</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-client</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-file</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-file</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>test-integration-common</artifactId>
-			<version>8.9.0.Alpha1-SNAPSHOT</version>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
