--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -16,6 +16,7 @@
 		<compiler.plugin.version>2.3.1</compiler.plugin.version>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<maven.compiler.source>1.6</maven.compiler.source>
+		<infinispan.version>5.2.7.Final</infinispan.version>
 	</properties>
 
 	<repositories>
@@ -52,7 +53,7 @@
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-object</artifactId>
@@ -60,6 +61,20 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-excel</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-jdbc</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-infinispan</artifactId>
@@ -75,18 +90,25 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jboss.teiid</groupId>
-			<artifactId>test-integration-common</artifactId>
-			<version>8.9.0.Alpha2-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.btm</groupId>
+			<artifactId>btm</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
+	<dependency>
+		<groupId>org.infinispan</groupId>
+		<artifactId>infinispan-client-hotrod</artifactId>
+		<version>${infinispan.version}</version>
+	</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
