--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>eclipselink-on-top-of-teiid</module>
         <module>hibernate-on-top-of-teiid</module>
         <module>teiid-quickstart</module>
+        <module>teiid-jdbc-driver-samples</module>
     <module>connector-myType</module>
   </modules>
 
