--- a/teiid-jdbc-driver-samples/pom.xml
+++ b/teiid-jdbc-driver-samples/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.teiid</groupId>
-	<artifactId>bigquery-quickstart</artifactId>
+	<artifactId>teiid-jdbc-driver-samples</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
-	<name>BigQuery Quick Start</name>
-	<description>BigQuery Quick Start</description>
+	<name>teiid-jdbc-driver-samples</name>
+	<description>teiid-jdbc-driver-samples</description>
 
 	<url>https://github.com/kylinsoong</url>
 
@@ -19,33 +19,25 @@
 	</properties>
 
 	<repositories>
-		<repository>
-			<id>google-api-services</id>
-			<url>https://google-api-client-libraries.appspot.com/mavenrepo</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
 	</repositories>
 
 
 	<dependencies>
-		<dependency>
-			<groupId>com.google.apis</groupId>
-			<artifactId>google-api-services-bigquery</artifactId>
-			<version>v2-rev42-1.12.0-beta</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.oauth-client</groupId>
-			<artifactId>google-oauth-client</artifactId>
-			<version>1.12.0-beta</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.http-client</groupId>
-			<artifactId>google-http-client-jackson2</artifactId>
-			<version>1.12.0-beta</version>
-		</dependency>
 
+<!--  
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>jdbc</classifier>
+		</dependency>
+-->
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-client</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
