--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -104,6 +104,11 @@
 			<scope>test</scope>
 		</dependency>
 
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<version>1.4.181</version>
+	</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
