--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -60,14 +60,14 @@
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-excel</artifactId>
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-jdbc</artifactId>
@@ -89,7 +89,7 @@
 			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-cassandra</artifactId>
@@ -104,11 +104,46 @@
 			<scope>test</scope>
 		</dependency>
 
-	<dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<version>1.4.181</version>
-	</dependency>
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>connector-mongodb</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-mongodb</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>connector-ws</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-ws</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-engine</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>tests</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.181</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -122,11 +157,11 @@
 			<version>2.1.3</version>
 		</dependency>
 
-	<dependency>
-		<groupId>org.infinispan</groupId>
-		<artifactId>infinispan-client-hotrod</artifactId>
-		<version>${infinispan.version}</version>
-	</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-client-hotrod</artifactId>
+			<version>${infinispan.version}</version>
+		</dependency>
 
 
 		<dependency>
