--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -79,6 +79,7 @@
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-infinispan</artifactId>
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
 
@@ -101,6 +102,7 @@
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-cassandra</artifactId>
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
 
@@ -108,6 +110,7 @@
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-mongodb</artifactId>
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
 
