--- a/ws-translator/pom.xml
+++ b/ws-translator/pom.xml
@@ -88,6 +88,13 @@
 			<version>2.6.8.redhat-7</version>
 		</dependency>
 
+	<dependency>
+		<groupId>org.apache.cxf</groupId>
+		<artifactId>cxf-bundle</artifactId>
+		<version>2.6.8</version>
+	</dependency>
+		
+
 	</dependencies>
 
 	<build>
