--- a/jdbc-client/pom.xml
+++ b/jdbc-client/pom.xml
@@ -26,6 +26,33 @@
 			<version>5.1.30</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-runtime</artifactId>
+			<version>8.9.0.Beta3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-admin</artifactId>
+			<version>8.9.0.Beta3-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-client</artifactId>
+			<version>8.9.0.Beta3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-jdbc</artifactId>
+			<version>8.9.0.Beta3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.btm</groupId>
+			<artifactId>btm</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
