--- a/netty-samples/pom.xml
+++ b/netty-samples/pom.xml
@@ -24,6 +24,9 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
 			<version>3.6.2.Final</version>
+			<!--  
+			<version>3.6.10.Final</version>
+			-->
 		</dependency>
 
 
