--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -128,6 +128,22 @@
 			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>connector-ldap</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<classifier>lib</classifier>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-ldap</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-ws</artifactId>
@@ -140,6 +156,13 @@
 			<artifactId>teiid-engine</artifactId>
 			<version>8.9.0.Alpha2-SNAPSHOT</version>
 			<classifier>tests</classifier>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-metadata</artifactId>
+			<version>8.9.0.Alpha2-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
