--- a/teiid-test/pom.xml
+++ b/teiid-test/pom.xml
@@ -28,6 +28,20 @@
 
 
 	<dependencies>
+	
+	<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>connector-mongodb</artifactId>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
+			<classifier>lib</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-mongodb</artifactId>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
+		</dependency>
+	
 
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -38,33 +52,44 @@
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-runtime</artifactId>
-			<version>8.9.0.Beta3-SNAPSHOT</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-admin</artifactId>
-			<version>8.9.0.Beta3-SNAPSHOT</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-client</artifactId>
-			<version>8.9.0.Beta3-SNAPSHOT</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>connector-file</artifactId>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
+			<classifier>lib</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.teiid.connectors</groupId>
+			<artifactId>translator-file</artifactId>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-jdbc</artifactId>
-			<version>8.9.0.Beta3-SNAPSHOT</version>
-			<scope>test</scope>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-engine</artifactId>
-			<version>8.9.0.Beta3-SNAPSHOT</version>
-			<classifier>tests</classifier>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
