--- a/teiid-quickstart/pom.xml
+++ b/teiid-quickstart/pom.xml
@@ -32,32 +32,32 @@
 	<dependency>
 		<groupId>org.jboss.teiid</groupId>
 		<artifactId>teiid-runtime</artifactId>
-		<version>8.9.0.Final</version>
+		<version>8.10.0.Alpha1-SNAPSHOT</version>
 	</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-admin</artifactId>
-			<version>8.9.0.Final</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-client</artifactId>
-			<version>8.9.0.Final</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-file</artifactId>
-			<version>8.9.0.Final</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>connector-file</artifactId>
-			<version>8.9.0.Final</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 			<classifier>lib</classifier>
 			<scope>test</scope>
 		</dependency>
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>org.jboss.teiid.connectors</groupId>
 			<artifactId>translator-object</artifactId>
-			<version>8.9.0.Final</version>
+			<version>8.10.0.Alpha1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
