updated translator hbase

--- a/translator-hbase/src/main/resources/org/teiid/translator/hbase/i18n.properties
+++ b/translator-hbase/src/main/resources/org/teiid/translator/hbase/i18n.properties
@@ -24,3 +24,6 @@ TEIID27010=Error executing statement(s): {0}
 TEIID27011=Unexpected exception while translating results: {0}
 TEIID27012=Unexpected exception while mapping HBase Table to Phoenix: {0}
 TEIID27013=Unexpected exception while restoring AutoCommit: {0}
+
+TEIID27014=Import property {0} not found to complete the metadata import from HBase Table.
+TEIID27015=Unexpected exception while mapping HBase Table to Phoenix in MetadataProcessor: {0}
