--- a/translator-hbase/pom.xml
+++ b/translator-hbase/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>connectors</artifactId>
         <groupId>org.jboss.teiid</groupId>
-        <version>8.10.0.Alpha1-SNAPSHOT</version>
+        <version>8.10.0.Alpha3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>translator-hbase</artifactId>
@@ -27,30 +27,35 @@
             <artifactId>connector-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        
+        <dependency>
+           <groupId>org.apache.phoenix</groupId>
+           <artifactId>phoenix-core</artifactId>
+        </dependency> 
+        <dependency>
+            <groupId>org.jboss.teiid.connectors</groupId>
+            <artifactId>hbase-api</artifactId>
+        </dependency> 
         <dependency>
             <groupId>org.jboss.teiid.connectors</groupId>
             <artifactId>connector-hbase</artifactId>
-            <version>8.10.0.Alpha1-SNAPSHOT</version>
-        </dependency> 
-        
+            <classifier>lib</classifier>
+            <scope>test</scope>
+        </dependency>
         <dependency>
-			<groupId>org.jboss.teiid</groupId>
-			<artifactId>teiid-runtime</artifactId>
-			<version>8.10.0.Alpha1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.teiid</groupId>
-			<artifactId>teiid-admin</artifactId>
-			<version>8.10.0.Alpha1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.teiid</groupId>
-			<artifactId>teiid-client</artifactId>
-			<version>8.10.0.Alpha1-SNAPSHOT</version>
-		</dependency>        
+            <groupId>org.jboss.teiid</groupId>
+            <artifactId>teiid-runtime</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.teiid</groupId>
+            <artifactId>teiid-admin</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.teiid</groupId>
+            <artifactId>teiid-client</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
