--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -16,6 +16,38 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+		<dependency>
+        	<groupId>org.codehaus.btm</groupId>
+            <artifactId>btm</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
+        	<groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.30</version>
+        </dependency>
+        
+        <dependency>
+        	<groupId>org.jboss.dashboard-builder</groupId>
+            <artifactId>dashboard-commons</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.jboss.dashboard-builder</groupId>
+            <artifactId>dashboard-ui-core</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
+        </dependency>  
+        <dependency>
+        	<groupId>org.jboss.dashboard-builder</groupId>
+            <artifactId>dashboard-ui-panels</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
+        </dependency>  
+        <dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.0_spec</artifactId>
+			<version>1.0.2.Final</version>
+		</dependency>   
+        
     	
 		  
     </dependencies>    
